--- a/hr-payroll/pom.xml
+++ b/hr-payroll/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>microservices.study</groupId>
 	<artifactId>hr-payroll</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>hr-payroll</name>
+	<name>hr-payment</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>20</java.version>
