--- a/hr-worker/pom.xml
+++ b/hr-worker/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>microservices</groupId>
 	<artifactId>hr-worker</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>study</name>
+	<name>hr-worker</name>
 	<description>Microservices demo project</description>
 	<properties>
 		<java.version>20</java.version>
