--- a/hr-eureka-server/pom.xml
+++ b/hr-eureka-server/pom.xml
@@ -5,39 +5,29 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.1.1</version>
+        <version>3.2.1</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>microservices.hr-eureka-server</groupId>
+    <groupId>microservices</groupId>
     <artifactId>hr-eureka-server</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>hr-eureka-server</name>
-    <description>hr-eureka-server</description>
+    <description>Eureka Server</description>
     <properties>
-        <java.version>17</java.version>
-        <spring-cloud.version>2022.0.3</spring-cloud.version>
+        <java.version>21</java.version>
+        <spring-cloud.version>2023.0.0</spring-cloud.version>
     </properties>
     <dependencies>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
-            <version>4.0.2</version>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-
-        <dependency>
-            <groupId>org.glassfish.jaxb</groupId>
-            <artifactId>jaxb-runtime</artifactId>
-        </dependency>
-
     </dependencies>
     <dependencyManagement>
         <dependencies>
